@@ -7,6 +7,11 @@ S3method("&",criterion)
 S3method("[",labelled)
 S3method("[",simple_table)
 S3method("[<-",labelled)
+S3method("column<-",data.frame)
+S3method("column<-",default)
+S3method("column<-",factor)
+S3method("column<-",list)
+S3method("column<-",matrix)
 S3method("if_val<-",default)
 S3method("if_val<-",list)
 S3method("ref<-",default)
@@ -24,10 +29,23 @@ S3method(as.labelled,default)
 S3method(as.labelled,factor)
 S3method(as.labelled,labelled)
 S3method(as.logical,labelled)
+S3method(build_criterion,"function")
+S3method(build_criterion,criterion)
+S3method(build_criterion,data.frame)
+S3method(build_criterion,default)
+S3method(build_criterion,list)
+S3method(build_criterion,logical)
+S3method(build_criterion,matrix)
 S3method(c,labelled)
 S3method(category,data.frame)
 S3method(category,default)
 S3method(category,matrix)
+S3method(check_conformance,default)
+S3method(check_conformance,list)
+S3method(column,data.frame)
+S3method(column,default)
+S3method(column,list)
+S3method(column,matrix)
 S3method(except,data.frame)
 S3method(except,default)
 S3method(except,matrix)
