@@ -45,9 +45,6 @@
 #' \code{...}\code{data}. Note that this kind of criterion doesn't use
 #' \code{...} so \code{...} can be used instead of \code{data} argument.}}
 #' 
-#' If criterion is missing (or is NULL) then non-NA's values will be
-#'   used for function.
-#' 
 #' \code{count*} and \code{\%in*\%} never returns NA's. Other functions remove
 #' NA's before calculations (as \code{na.rm = TRUE} in base R functions).
 #' 
@@ -242,7 +239,7 @@
 #' with(dfs, min_if("a", grade[2:5], data = weight[1:4])) # 10
 #' 
 #' 
-count_if=function(criterion = NULL,...){
+count_if=function(criterion,...){
     dfs = dots2data_frame(...)   
     cond = build_criterion(criterion, dfs)
     sum(cond,na.rm=TRUE)
@@ -250,7 +247,7 @@ count_if=function(criterion = NULL,...){
 
 #' @export
 #' @rdname count_if
-count_row_if=function(criterion = NULL,...){
+count_row_if=function(criterion,...){
     dfs = dots2data_frame(...)   
     cond = build_criterion(criterion, dfs)
     rowSums(cond,na.rm=TRUE)
@@ -259,7 +256,7 @@ count_row_if=function(criterion = NULL,...){
 
 #' @export
 #' @rdname count_if
-count_col_if=function(criterion = NULL,...){
+count_col_if=function(criterion,...){
     dfs = dots2data_frame(...)   
     cond = build_criterion(criterion, dfs)
     colSums(cond,na.rm=TRUE)
@@ -302,14 +299,14 @@ count_col_if=function(criterion = NULL,...){
 
 #' @export
 #' @rdname count_if
-sum_if=function(criterion = NULL, ..., data = NULL){
+sum_if=function(criterion, ..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     sum(data, na.rm = TRUE)
 }
 
 #' @export
 #' @rdname count_if
-sum_row_if=function(criterion = NULL,..., data = NULL){
+sum_row_if=function(criterion,..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     rowSums(data, na.rm=TRUE)
 }
@@ -317,7 +314,7 @@ sum_row_if=function(criterion = NULL,..., data = NULL){
 
 #' @export
 #' @rdname count_if
-sum_col_if=function(criterion = NULL,..., data = NULL){
+sum_col_if=function(criterion,..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     colSums(data, na.rm=TRUE)
 }
@@ -327,7 +324,7 @@ sum_col_if=function(criterion = NULL,..., data = NULL){
 
 #' @export
 #' @rdname count_if
-mean_if=function(criterion = NULL, ..., data = NULL){
+mean_if=function(criterion, ..., data = NULL){
     data = as.matrix(fun_if_helper(criterion = criterion, ..., data = data))
     if(!(is.numeric(data) | is.logical(data) | is.complex(data))) {
         stop("Invalid argument type: for averaging it should be numeric or logical")
@@ -337,7 +334,7 @@ mean_if=function(criterion = NULL, ..., data = NULL){
 
 #' @export
 #' @rdname count_if
-mean_row_if=function(criterion = NULL,..., data = NULL){
+mean_row_if=function(criterion,..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     rowMeans(data, na.rm=TRUE)
 }
@@ -345,7 +342,7 @@ mean_row_if=function(criterion = NULL,..., data = NULL){
 
 #' @export
 #' @rdname count_if
-mean_col_if=function(criterion = NULL,..., data = NULL){
+mean_col_if=function(criterion,..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     colMeans(data, na.rm=TRUE)
 }
@@ -355,7 +352,7 @@ mean_col_if=function(criterion = NULL,..., data = NULL){
 
 #' @export
 #' @rdname count_if
-sd_if=function(criterion = NULL, ..., data = NULL){
+sd_if=function(criterion, ..., data = NULL){
     data = as.matrix(fun_if_helper(criterion = criterion, ..., data = data))
     if(!(is.numeric(data) | is.logical(data) | is.complex(data))) {
         stop("Invalid argument type: for standard deviation it should be numeric or logical")
@@ -365,7 +362,7 @@ sd_if=function(criterion = NULL, ..., data = NULL){
 
 #' @export
 #' @rdname count_if
-sd_row_if=function(criterion = NULL,..., data = NULL){
+sd_row_if=function(criterion,..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     apply(data, 1, stats::sd, na.rm=TRUE)
 }
@@ -373,7 +370,7 @@ sd_row_if=function(criterion = NULL,..., data = NULL){
 
 #' @export
 #' @rdname count_if
-sd_col_if=function(criterion = NULL,..., data = NULL){
+sd_col_if=function(criterion,..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     apply(data, 2, stats::sd, na.rm=TRUE)
 }
@@ -382,7 +379,7 @@ sd_col_if=function(criterion = NULL,..., data = NULL){
 
 #' @export
 #' @rdname count_if
-median_if=function(criterion = NULL, ..., data = NULL){
+median_if=function(criterion, ..., data = NULL){
     data = as.matrix(fun_if_helper(criterion = criterion, ..., data = data))
     if(!(is.numeric(data) | is.logical(data) | is.complex(data))) {
         stop("Invalid argument type: for median it should be numeric or logical")
@@ -392,7 +389,7 @@ median_if=function(criterion = NULL, ..., data = NULL){
 
 #' @export
 #' @rdname count_if
-median_row_if=function(criterion = NULL,..., data = NULL){
+median_row_if=function(criterion,..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     apply(data, 1, stats::median, na.rm=TRUE)
 }
@@ -400,7 +397,7 @@ median_row_if=function(criterion = NULL,..., data = NULL){
 
 #' @export
 #' @rdname count_if
-median_col_if=function(criterion = NULL,..., data = NULL){
+median_col_if=function(criterion,..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     apply(data, 2, stats::median, na.rm=TRUE)
 }
@@ -410,7 +407,7 @@ median_col_if=function(criterion = NULL,..., data = NULL){
 
 #' @export
 #' @rdname count_if
-max_if=function(criterion = NULL, ..., data = NULL){
+max_if=function(criterion, ..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     res = suppressWarnings(max(data, na.rm = TRUE))
     if(!is.finite(res)) res = NA
@@ -419,7 +416,7 @@ max_if=function(criterion = NULL, ..., data = NULL){
 
 #' @export
 #' @rdname count_if
-max_row_if=function(criterion = NULL,..., data = NULL){
+max_row_if=function(criterion,..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     res = suppressWarnings(do.call(pmax, c(data, na.rm=TRUE)))
     res[!is.finite(res)] = NA
@@ -429,7 +426,7 @@ max_row_if=function(criterion = NULL,..., data = NULL){
 
 #' @export
 #' @rdname count_if
-max_col_if=function(criterion = NULL,..., data = NULL){
+max_col_if=function(criterion,..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     res = suppressWarnings(apply(data, 2, max, na.rm=TRUE))
     res[!is.finite(res)] = NA
@@ -440,7 +437,7 @@ max_col_if=function(criterion = NULL,..., data = NULL){
 
 #' @export
 #' @rdname count_if
-min_if=function(criterion = NULL, ..., data = NULL){
+min_if=function(criterion, ..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     res = suppressWarnings(min(data, na.rm = TRUE))
     if(!is.finite(res)) res = NA
@@ -449,7 +446,7 @@ min_if=function(criterion = NULL, ..., data = NULL){
 
 #' @export
 #' @rdname count_if
-min_row_if=function(criterion = NULL,..., data = NULL){
+min_row_if=function(criterion,..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     res = suppressWarnings(do.call(pmin, c(data, na.rm=TRUE)))
     res[!is.finite(res)] = NA
@@ -459,7 +456,7 @@ min_row_if=function(criterion = NULL,..., data = NULL){
 
 #' @export
 #' @rdname count_if
-min_col_if=function(criterion = NULL,..., data = NULL){
+min_col_if=function(criterion,..., data = NULL){
     data = fun_if_helper(criterion = criterion, ..., data = data)
     res = suppressWarnings(apply(data, 2, min, na.rm=TRUE))
     res[!is.finite(res)] = NA
@@ -471,7 +468,7 @@ min_col_if=function(criterion = NULL,..., data = NULL){
 
 #' @export
 #' @rdname count_if
-apply_row_if=function(fun, criterion = NULL,..., data = NULL){
+apply_row_if=function(fun, criterion,..., data = NULL){
     dfs = dots2data_frame(...) # form data.frame 
     criterion = build_criterion(criterion, dfs)
     
@@ -507,7 +504,7 @@ apply_row_if=function(fun, criterion = NULL,..., data = NULL){
 
 #' @export
 #' @rdname count_if
-apply_col_if=function(fun, criterion = NULL,..., data = NULL){
+apply_col_if=function(fun, criterion,..., data = NULL){
     dfs = dots2data_frame(...) # form data.frame 
     criterion = build_criterion(criterion, dfs)
     if (is.null(data)){
