@@ -7,6 +7,7 @@
 * Functions for default dataset now invisibly return modified default dataset
 * Fix logical arguments in boolean operations for criteria functions
 * `%in_row%`/`%in_col%` are deprecated. Use `%row_in%`/`%col_in%` instead.
+* NULL argument for criterion is removed. Use `not_na` instead.
 
 0.5.5 (19.10.2016)
 ================
